apply sym rules to get sym by name

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -80,6 +80,11 @@ Symbol=Water Source
 
 Enabled=True
 Type=EndWith
+Text=谷線
+Symbol=Water Source
+
+Enabled=True
+Type=EndWith
 Text=公車站
 Symbol=Ground Transportation
 
