--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -96,7 +96,7 @@ Symbol=Ground Transportation
 Enabled=True
 Type=EndWith
 Text=登山口
-Symbol=Pin, Red
+Symbol=Trail Head
 
 Enabled=True
 Type=EndWith
