update sym rule

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -95,6 +95,11 @@ Symbol=Ground Transportation
 
 Enabled=True
 Type=EndWith
+Text=樹
+Symbol=Forest
+
+Enabled=True
+Type=EndWith
 Text=登山口
 Symbol=Trail Head
 
@@ -142,6 +147,11 @@ Enabled=True
 Type=EndWith
 Text=學校
 Symbol=School
+
+Enabled=True
+Type=EndWith
+Text=鞍部
+Symbol=Col
 
 Enabled=True
 Type=EndWith
@@ -321,5 +331,5 @@ Symbol=Crossing
 Enabled=True
 Type=Contain
 Text=
-Symbol=Waypoint
+Symbol=City (Small)
 
