update sym rule

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -151,7 +151,7 @@ Symbol=School
 Enabled=True
 Type=EndWith
 Text=鞍部
-Symbol=Col
+Symbol=Saddle
 
 Enabled=True
 Type=EndWith
@@ -215,12 +215,12 @@ Symbol=Lodge
 
 Enabled=True
 Type=EndWith
-Text=家
+Text=宅
 Symbol=Lodge
 
 Enabled=True
 Type=EndWith
-Text=宅
+Text=家
 Symbol=Lodge
 
 Enabled=True
@@ -282,6 +282,11 @@ Enabled=True
 Type=EndWith
 Text=橋
 Symbol=Bridge
+
+Enabled=True
+Type=EndWith
+Text=倒木
+Symbol=Stump
 
 Enabled=True
 Type=Contain
