update sym rules

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -155,6 +155,11 @@ Symbol=Saddle
 
 Enabled=True
 Type=EndWith
+Text=鞍
+Symbol=Saddle
+
+Enabled=True
+Type=EndWith
 Text=山
 Symbol=Summit
 
@@ -221,6 +226,11 @@ Symbol=Lodge
 Enabled=True
 Type=EndWith
 Text=家
+Symbol=Lodge
+
+Enabled=True
+Type=EndWith
+Text=工寮
 Symbol=Lodge
 
 Enabled=True
