--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -85,6 +85,11 @@ Symbol=Water Source
 
 Enabled=True
 Type=EndWith
+Text=隧道
+Symbol=Tunnel
+
+Enabled=True
+Type=EndWith
 Text=公車站
 Symbol=Ground Transportation
 
