update sym rules

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -235,8 +235,13 @@ Symbol=Lodge
 
 Enabled=True
 Type=EndWith
-Text=工寮
+Text=寮
 Symbol=Lodge
+
+Enabled=True
+Type=EndWith
+Text=景觀台
+Symbol=Scenic Area
 
 Enabled=True
 Type=Contain
