update symbol rules

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -4,7 +4,7 @@ Text=水源
 Symbol=Water Source
 
 Enabled=True
-Type=EndWith
+Type=Contain
 Text=河
 Symbol=Water Source
 
@@ -110,17 +110,17 @@ Symbol=Trail Head
 
 Enabled=True
 Type=EndWith
-Text=營地
-Symbol=Campground
-
-Enabled=True
-Type=EndWith
 Text=獵寮
 Symbol=Campground
 
 Enabled=True
 Type=EndWith
 Text=紮營點
+Symbol=Campground
+
+Enabled=True
+Type=EndWith
+Text=營地
 Symbol=Campground
 
 Enabled=True
@@ -152,6 +152,21 @@ Enabled=True
 Type=EndWith
 Text=學校
 Symbol=School
+
+Enabled=True
+Type=Contain
+Text=廁所
+Symbol=Restroom
+
+Enabled=True
+Type=EndWith
+Text=球場
+Symbol=Ball Park
+
+Enabled=True
+Type=EndWith
+Text=公園
+Symbol=Park
 
 Enabled=True
 Type=EndWith
@@ -186,6 +201,11 @@ Symbol=Summit
 Enabled=True
 Type=EndWith
 Text=尖
+Symbol=Summit
+
+Enabled=True
+Type=EndWith
+Text=頂
 Symbol=Summit
 
 Enabled=True
@@ -307,6 +327,11 @@ Enabled=True
 Type=EndWith
 Text=倒木
 Symbol=Stump
+
+Enabled=True
+Type=Contain
+Text=停車場
+Symbol=Parking Area
 
 Enabled=True
 Type=Contain
