update sym rule

--- a/sym_rule.conf
+++ b/sym_rule.conf
@@ -85,6 +85,21 @@ Symbol=Water Source
 
 Enabled=True
 Type=EndWith
+Text=鐵門
+Symbol=Controlled Area
+
+Enabled=True
+Type=EndWith
+Text=柵門
+Symbol=Controlled Area
+
+Enabled=True
+Type=EndWith
+Text=停機坪
+Symbol=Heliport
+
+Enabled=True
+Type=EndWith
 Text=隧道
 Symbol=Tunnel
 
@@ -329,6 +344,11 @@ Text=倒木
 Symbol=Stump
 
 Enabled=True
+Type=EndWith
+Text=盜伐
+Symbol=Stump
+
+Enabled=True
 Type=Contain
 Text=停車場
 Symbol=Parking Area
@@ -351,6 +371,11 @@ Symbol=Mile Marker
 Enabled=True
 Type=Contain
 Text=電線幹
+Symbol=Mile Marker
+
+Enabled=True
+Type=Contain
+Text=分幹
 Symbol=Mile Marker
 
 Enabled=True
