update sym rule

--- a/conf/sym_rule.conf
+++ b/conf/sym_rule.conf
@@ -65,6 +65,11 @@ Symbol=Water Source
 
 Enabled=True
 Type=EndWith
+Text=潭
+Symbol=Water Source
+
+Enabled=True
+Type=EndWith
 Text=瀑布
 Symbol=Water Source
 
