update sym rules

--- a/conf/sym_rule.conf
+++ b/conf/sym_rule.conf
@@ -100,6 +100,11 @@ Symbol=Controlled Area
 
 Enabled=True
 Type=EndWith
+Text=柵欄
+Symbol=Controlled Area
+
+Enabled=True
+Type=EndWith
 Text=停機坪
 Symbol=Heliport
 
@@ -116,6 +121,11 @@ Symbol=Ground Transportation
 Enabled=True
 Type=EndWith
 Text=站牌
+Symbol=Ground Transportation
+
+Enabled=True
+Type=EndWith
+Text=車站
 Symbol=Ground Transportation
 
 Enabled=True
@@ -241,6 +251,11 @@ Symbol=Summit
 Enabled=True
 Type=EndWith
 Text=高地
+Symbol=Summit
+
+Enabled=True
+Type=EndWith
+Text=最高點
 Symbol=Summit
 
 Enabled=True
