update sym rules

--- a/conf/sym_rule.conf
+++ b/conf/sym_rule.conf
@@ -90,6 +90,16 @@ Symbol=Water Source
 
 Enabled=True
 Type=EndWith
+Text=博物館
+Symbol=Museum
+
+Enabled=True
+Type=EndWith
+Text=文物館
+Symbol=Museum
+
+Enabled=True
+Type=EndWith
 Text=鐵門
 Symbol=Controlled Area
 
@@ -186,6 +196,11 @@ Symbol=School
 Enabled=True
 Type=Contain
 Text=廁所
+Symbol=Restroom
+
+Enabled=True
+Type=Contain
+Text=公廁
 Symbol=Restroom
 
 Enabled=True
@@ -310,6 +325,11 @@ Symbol=Scenic Area
 
 Enabled=True
 Type=EndWith
+Text=餐廳
+Symbol=Restaurant
+
+Enabled=True
+Type=EndWith
 Text=山門
 Symbol=Church
 
@@ -325,11 +345,6 @@ Symbol=Church
 
 Enabled=True
 Type=EndWith
-Text=餐廳
-Symbol=Restaurant
-
-Enabled=True
-Type=EndWith
 Text=寺
 Symbol=Church
 
@@ -342,6 +357,11 @@ Enabled=True
 Type=EndWith
 Text=宮
 Symbol=Church
+
+Enabled=True
+Type=EndWith
+Text=瞭望台
+Symbol=Short Tower
 
 Enabled=True
 Type=EndWith
