update sym rules

--- a/conf/sym_rule.conf
+++ b/conf/sym_rule.conf
@@ -150,6 +150,11 @@ Symbol=Trail Head
 
 Enabled=True
 Type=EndWith
+Text=古道口
+Symbol=Trail Head
+
+Enabled=True
+Type=EndWith
 Text=獵寮
 Symbol=Campground
 
