update sym rule

--- a/conf/sym_rule.conf
+++ b/conf/sym_rule.conf
@@ -394,6 +394,11 @@ Text=盜伐
 Symbol=Stump
 
 Enabled=True
+Type=EndWith
+Text=樹根牆
+Symbol=Stump
+
+Enabled=True
 Type=Contain
 Text=停車場
 Symbol=Parking Area
