--- a/conf/giseditor.conf.win.sample
+++ b/conf/giseditor.conf.win.sample
@@ -1,14 +1,16 @@
-def_syms_conf=def_sym.conf
-sym_rule_conf=sym_rule.conf
-cache_dir=C:\Users\TT_Tsai\Dropbox\backup\mapcache
+cache_dir=mapcache
 gpsbabel_exe=C:\Program Files (x86)\GPSBabel\gpsbabel.exe
-truetypefont=ARIALUNI.TTF
-font_size=18
-tz=8
-icon_dir=icon
+img_font=ARIALUNI.TTF
+img_font_size=18
+tz=8.000000
 icon_size=32
 def_symbol=Waypoint
 max_supp_level=18
 min_supp_level=7
-split_time_gap=4.0
-split_dist_gap=200
+split_time_gap=4.000000
+split_dist_gap=200.000000
+select_area_x=7.000000
+select_area_y=5.000000
+select_area_align=y
+select_area_fixed=y
+select_area_level=16
