--- a/data/giseditor.bat.sample
+++ b/data/giseditor.bat.sample
@@ -1,3 +1,3 @@
-python C:\Users\dayanuyim\Projects\PicGisEditor\src\main.py %*
+python C:\PicGisEditor\src\main.py %*
 
 @IF %ERRORLEVEL% NEQ 0 pause
