--- a/conf/sym_rule.conf
+++ b/conf/sym_rule.conf
@@ -175,6 +175,16 @@ Symbol=City Hall
 
 Enabled=True
 Type=EndWith
+Text=加油站
+Symbol=Gas Station
+
+Enabled=True
+Type=EndWith
+Text=圖書館
+Symbol=Library
+
+Enabled=True
+Type=EndWith
 Text=國小
 Symbol=School
 
@@ -315,7 +325,7 @@ Symbol=Lodge
 
 Enabled=True
 Type=EndWith
-Text=景觀台
+Text=觀景台
 Symbol=Scenic Area
 
 Enabled=True
