--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 bak/
 cache/
 giseditor.conf
+giseditor.map.conf
+sym_rule.conf
 giseditor.bat
 giseditor.exe
 giseditor.exe.config
+*.mbtiles
