Update giseditor.exe.config default path of main.py

--- a/install/win/giseditor.exe.config
+++ b/install/win/giseditor.exe.config
@@ -14,7 +14,7 @@
                 <value>WinPython-64bit-3.4.3.7Zero\python-3.4.3.amd64</value>
             </setting>
             <setting name="AppMainPath" serializeAs="String">
-                <value>app\src\main.py</value>
+                <value>main.py</value>
             </setting>
             <setting name="HasConsole" serializeAs="String">
                 <value>False</value>
