Add Options for showing coordinate lines
Options.coordLineSys
    - TWD67
    - TWD97

Options.coordLineLayer
    - COORD_TEXT: Cooordinate Values for KM
    - COORD_KM:　 Cooordinate Lines for KM
    - COORD_100M: Cooordinate Lines for 100M

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,17 @@ giseditor.exe
 giseditor.exe.config
 *.mbtiles
 .idea/*
+
+### Vim ###
+# swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
