--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+image>=1.5.3
 cycler==0.10.0
 matplotlib==2.0.2
 numpy==1.12.1
@@ -9,3 +10,4 @@ python-dateutil==2.6.0
 pytz==2017.2
 six==1.10.0
 timezonefinder==2.1.0
+certifi>=2017.11.5
