--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ Session.vim
 *~
 # auto-generated tag files
 tags
+
+rust_src/tile/build/
+
+rust_src/tile/Cargo\.lock
+
+rust_src/tile/tile\.egg-info/
