--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-image>=1.5.3
-cycler==0.10.0
-matplotlib==2.0.2
-numpy==1.12.1
-olefile==0.44
-Pillow==4.1.1
-Pmw==2.0.1
-pyparsing==2.2.0
-python-dateutil==2.6.0
-pytz==2017.2
-six==1.10.0
-timezonefinder==2.1.0
-certifi>=2017.11.5
+image>=1.5.33
+cycler>=0.11.0
+matplotlib>=3.7.1
+numpy>=1.25.0
+olefile>=0.46
+pillow>=9.5.0
+pmw>=2.1.1
+pyparsing>=3.1.0
+python-dateutil>=2.8.2
+pytz>=2023.3
+six>=1.16.0
+timezonefinder>=6.2.0
+certifi>=2023.5.7
